# lgd

./: .dockerignore  .gitignore  APPENDIX_README_RU.md  APPENDIX_SUMMARY.md  CHANGELOG_PABBO.md  CLUSTER_README.md  Dockerfile  EXPERIMENT_SPECIFICATION.md  GPU_CHANGES_SUMMARY.md  GPU_SETUP.md  PABBO_SETUP_FIXED.md  PARALLEL_EXECUTION.md  QUICK_START.md  QUICK_START_PABBO.md  README.md  TENSORBOARD_GUIDE.md  Untitled1 (3).ipynb  X_agnews_train_bow.npz  additional_references.bib  build.sh  build_and_push.sh  cluster_config.example.sh  experiments.ipynb  for_klaster.py  for_klaster_gpu.py  lda.py  lda_optimizer.py  lda_parallel.py  paper_sections_COMPACT.tex  paper_sections_algorithms_setup.tex  pyproject.toml  requirements.txt  run.sh  run_exp.md  run_gpu.sh  start_tensorboard.sh  tensorboard_workflow.txt  test_docker_local.sh  test_gpu.py  ИНСТРУКЦИЯ.md
all_exps/: IMPLEMENTATION_SUMMARY.md  INSTALL_AND_RUN.sh  Makefile  PABBO_PRETRAIN_GUIDE.md  QUICKSTART.md  QUICKSTART.txt  README.md  README_TEST.md  RUN.md  START_HERE.md  STATUS.md  __init__.py  example_usage.py  exp_es.py  exp_ga.py  exp_pabbo.py  main.py  requirements.txt  test.py
data/: Untitled1 (3).ipynb  X_20news_train_bow.npz  X_20news_val_bow.npz  X_agnews_val_bow.npz  X_val_out_train_bow.npz  X_val_out_val_bow.npz  X_yelp_train_bow.npz  X_yelp_val_bow.npz
docs/: README.md
docs/experiment_docs/: ALGORITHMS_SUMMARY.md  EXPERIMENT_FLOWCHART.md  EXPERIMENT_SUMMARY.md  VERIFICATION_REPORT.md  WORKFLOW_DIAGRAM.md
docs/guides/: GPU_README.md  PABBO_PRETRAINING_GUIDE.md  PABBO_TRAINING_GUIDE.md  run_exp.md
docs/paper_sections/: paper_tables.tex
exps/: 1.tex  1.txt  2.txt  combine_summaries.py  full_summary.tex  full_summary_combined.tex  full_theory_and_formulas.tex  paragraph_finder.py
labs/plots/: main.py
labs/run_20251104_135335/: all_results.json
lda_hyperopt/: HYPERPARAMETERS.md  README.md  SABO_README.md  generate_init.py  lda_init_population.json  run.py  run_no_early_stop.py  test_sabo.py  utils.py
lda_hyperopt/optimizers/: __init__.py  es.py  ga.py  pabbo_full.py  pabbo_simple.py  sabo.py
lda_hyperopt/results/: overall_summary.json
lda_pipeline_results/run_20251104_040208/: all_results.json
pabbo_method/: README.md  __init__.py  baseline.py  check_setup.py  evaluate_continuous.py  evaluate_discrete.py  plot.ipynb  policy_learning.py  requirements.txt  train.py  wandb_wrapper.py
pabbo_method/configs/: train_rastrigin1d_test.yaml
pabbo_method/data/: function.py
pabbo_method/datasets/: GP1D_evaluation_task.pt
pabbo_method/policies/: pbo.py
pabbo_method/utils/: __init__.py
pabbo_optimization/: README.md  RESULTS.md  simple_experiment.ipynb  sinexp_experiment.ipynb  test_sinexp_function.py
paper_appendix/: APPENDIX_USAGE_INSTRUCTIONS.md  INDEX.md  README.md  paper_appendix_implementation.tex  paper_appendix_short.tex
test_function_opt/: README.md  generate_init.py  run.py  test_function.py  test_init_population.json  utils.py
test_function_opt/optimizers/: __init__.py  es.py  ga.py  pabbo_full.py  pabbo_simple.py
test_function_opt/test_results/: overall_summary.json
(+2677 files in other folders)
