[project]
name = "llabs"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Akramov",email = "akramovromanr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim (>=4.4.0,<5.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "deap (>=1.4.3,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
