[project]
name = "llabs"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Akramov",email = "akramovromanr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "gensim (>=4.4.0,<5.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "deap (>=1.4.3,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tensorboardx (>=2.6.0,<3.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "botorch (>=0.16.0,<0.17.0)",
    "flatten-dict (>=0.4.2,<0.5.0)",
    "gpytorch (>=1.14.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torchrl (>=0.10.0,<0.11.0)",
    "torch (>=2.9.0,<3.0.0)",
    "sobol-seq (>=0.2.0,<0.3.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "wandb (>=0.22.3,<0.23.0)",
    "hydra-core (>=1.3,<1.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
