[project]
name = "llabs"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Akramov",email = "akramovromanr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    # Core numerical and scientific computing
    "numpy (>=1.24.0,<2.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",

    # Machine learning
    "scikit-learn (>=1.7.2,<2.0.0)",

    # Deep learning and optimization
    "torch (>=2.9.0,<3.0.0)",
    "botorch (>=0.16.0,<0.17.0)",
    "gpytorch (>=1.14.2,<2.0.0)",
    "torchrl (>=0.10.0,<0.11.0)",

    # Evolutionary algorithms
    "deap (>=1.4.3,<2.0.0)",

    # Configuration management
    "hydra-core (>=1.3,<1.4)",
    "omegaconf (>=2.3.0,<3.0.0)",

    # Logging and experiment tracking
    "wandb (>=0.22.3,<0.23.0)",
    "tensorboardx (>=2.6.0,<3.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",

    # Visualization
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",

    # Utilities
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "flatten-dict (>=0.4.2,<0.5.0)",
    "sobol-seq (>=0.2.0,<0.3.0)",

    # Development tools
    "notebook (>=7.4.7,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
